src/App.css
body {
  background-color: black;
  color: white;
}

.text-field {
  width: 60px
}

.column {
  column-width: auto;
  flex-direction: column
}


#delete-voice {
  height: 29px
}

:root {
  --u: 40px;

  --name-w: calc(var(--u) * 2);
  --slider-w: calc(var(--u) * 3);
  --delete-w: calc(var(--u));
  --label-w: calc(var(--u) * 1.5);

  --notes-w: calc(var(--u) * 9);
  --octaves-w: calc(var(--u) * 9);

  --sounds-w: calc(var(--u) * 5);
  --intervals-w: calc(var(--u) * 4);

  --line: 1px;
}

#voice {
  width: fit-content;

  display: flex;
  flex-direction: column;

  font-size: calc(var(--u) * 0.35);
  padding: 5px;
  border: 2px dotted red;
}

.row {
  display: flex;
  justify-content: space-between;
}

.name,
.slider,
.delete,
.notes,
.octaves,
.sounds,
.intervals {

  display: flex;
  align-items: center;
  justify-content: center;

  text-align: center;

  box-sizing: border-box;
}

.intervals {
  margin-left: 3px;
}


/* row 1 */

.name {
  width: var(--name-w);
  /* aspect-ratio: 2 / 1; */
}


.range-slider__thumb::after {  
  content: attr(data-label);  
  /* position: absolute;   */
  /* bottom: calc(50%);    */
  /* transform: translateX(50%);   */
  font-size: 12px;  
  white-space: nowrap;  
  margin: auto;
}

.delete {
  width: var(--delete-w);
  /* aspect-ratio: 1 / 1; */
}

.checkbox-label {
  width: var(--label-w);
  text-align: left;
}

.checkboxes {
  margin: auto;
  /* display: flex; */
  /* flex-direction: column; */
  /* align-items: center; */
  /* justify-content: center; */
  /* gap: 5px; */
}


/* full rows */

.notes,
.octaves {
  /* width: var(--notes-w); */

  /* aspect-ratio: 9 / 1; */

  align-self: center;
}


/* borders */

.slider {
  width: var(--slider-w);
  /* margin-left: 5px; */
  /* margin-right: 5px; */
  /* margin-top: 20px; */
  /* margin-bottom: 10px; */
  margin: 10px;
}

slider-label {
  text-align: center;
}

